bench: Add concurrent writes benchmark, env var to disable io_uring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,3 +104,7 @@ harness = false
 [[bench]]
 name = "syscall_benchmark"
 harness = false
+
+[[bench]]
+name = "concurrent_writes_benchmark"
+harness = false
